--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,10 +1,10 @@
 $body-bg:#41b883;
 $primary: #155f59;
-$secondary: #e90e66;
-$danger: #dd0000;
+$secondary: #2220203f;
+$danger:#fc3030dc;
 $success: lime;
 $warning: orange;
-$info: aqua;
+$info:#ffffff8a;
 $blue: blue;
 $indigo: indigo;
 $purple: purple;
@@ -15,7 +15,8 @@ $yellow: yellow;
 $green: green;
 $teal: teal;
 $cyan: cyan;
-$white: white;
+$white: #ffffff;
+$blog:#ffffff8a;
 $gray: gray;
 $gray-dark: darkslategray;
 $colors: ( "blue": $blue, "indigo": $indigo, "purple": $purple, "pink": $pink, "red": $red, "orange": $orange, "yellow": $yellow, "green": $green, "teal": $teal, "cyan": $cyan, "white": $white, "gray": $gray, "gray-dark": $gray-dark, ) !default;
