--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -5,12 +5,12 @@ $danger:#fc3030dc;
 $success: lime;
 $warning: orange;
 $info:#ffffff8a;
-$blue: blue;
+$blue: rgba(255, 255, 255, 0.863);
 $indigo: indigo;
 $purple: purple;
 $pink: pink;
 $red: red;
-$orange: orange;
+$orange:#41b883;
 $yellow: yellow;
 $green: green;
 $teal: teal;
